@@ -1,0 +1,5 @@
+{% extends "base.html" %}
+
+{% block content %}
+	{% invalid_template_tag %}
+{% endblock %}
