@@ -113,6 +113,7 @@ def render_admin_rows(request, pages, site, filtered=False, language=None):
             'lang': lang,
             'filtered': filtered,
             'metadata': metadata,
+            'page_languages': page.get_languages(),
             'preview_language': language,
             'has_add_page_permission': user_can_add(user, target=page),
             'has_change_permission': user_can_change(user, page),
